# CudaPractice

./: CMakeLists.txt  best_cpu.cu  clock.h  filters.h  kernel1.cu  kernel2.cu  kernel3.cu  kernel4.cu  kernel5.cu  kernels.h  main.cu  tests.cu
